--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
 
     <script src="lib/step/step.js"></script>
-
+    <script src="NwLib/NwSS.min.js"></script>
     <script src="NwLib/NwLib.js"></script>
     <script src="NwUtil/NwDataMsgObj.js"></script>
 
     <script src="NwConn/NwWsClient.js"></script>
-    <script src="service_conn/NwStockServiceConn.js"></script>
-    <!--<script src="NwLib/NwSS.min.js"></script>-->
+    <script src="service_conn/NwMLabServiceConn.js"></script>
+
 
     <script src="NwLogWords/logWords.js"></script>
-    <script src="NwLogWords/mlabApiConn.js"></script>
+    <script src="NwConn/NwMlabApiConn.js"></script>
 
     <script src="word/WordEachView.js"></script>
     <script src="word/WordView.js"></script>
