--- a/_test/mlab.html
+++ b/_test/mlab.html
@@ -5,38 +5,36 @@
 
     <!--<script src="../lib/xdr.js"></script>-->
     <script src="../lib/jquery/jquery-2.1.1.js"></script>
-    <script src="../NwLogWords/mlabApiConn.js"></script>
-
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+    <script src="../NwConn/NwMLabApiConn.js"></script>
 
     <script>
 
-        $.getJSON('//ip-api.com/json?callback=?', function (data) {//150 requests per minute = 9000/hr //best geolocation
-            //console.log('ip-api', JSON.stringify(data, null, 2));
+        //$.getJSON('//ip-api.com/json?callback=?', function (data) {//150 requests per minute = 9000/hr //best geolocation
 
-            //ip-api {
-            //    "as": "AS23969 TOT Public Company Limited",
-            //    "city": "Phuket",
-            //    "country": "Thailand",
-            //    "countryCode": "TH",
-            //    "isp": "TOT",
-            //    "lat": 7.95,
-            //    "lon": 98.3583,
-            //    "org": "TOT",
-            //    "query": "1.0.255.199",
-            //    "region": "83",
-            //    "regionName": "Phuket",
-            //    "status": "success",
-            //    "timezone": "Asia/Bangkok",
-            //    "zip": "83000"
-            //}
+        //    mlabApiConn.k = "32KYjlie99BH6Euf8x98GQaOVbXAj-Zw";
+        //    mlabApiConn.insert('connectlog', 'data', { ip: data.query, data: data, type: 'ip-api', date: new Date() });
+        //});
+        var key = 'var r=b[n>>>2]>>>24-8*(n%4)&255;';
+        mlabApiConn.k = "32KYjlie99BH6Euf8x98GQaOVbXAj-Zw";
+        //mlabApiConn.insert('connectlog', 'data', { ip: data.query, data: data, type: 'ip-api', date: new Date() });
 
-            //var conn = new mlabApiConn("32KYjlie99BH6Euf8x98GQaOVbXAj-Zw");
-            mlabApiConn.k = "32KYjlie99BH6Euf8x98GQaOVbXAj-Zw";
-            mlabApiConn.insert('connectlog', 'data', { ip: data.query, data: data, type: 'ip-api', date: new Date() });
+        mlabApiConn.findOne('nwdict', 'data', { esearch: 'test' }, function (data) {
+            //console.log(data);
+            var val = CryptoJS.AES.decrypt(data.dt, key);
+
+            var dataObj = JSON.parse(val.toString(CryptoJS.enc.Utf8));
+
+            console.log(dataObj);// val.toString(CryptoJS.enc.Utf8).split('\n').length );
+
         });
 
+        mlabApiConn.count('nwdict', 'data', {  }, function (data) {
+            //console.log(data);
 
+            console.log(data);// val.toString(CryptoJS.enc.Utf8).split('\n').length );
 
+        });
         //conn.insert('', '', {}, {});
 
     </script>
