--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
     <script src="NwLogWords/logWords.js"></script>
-    <script src="NwConn/NwMlabApiConn.js"></script>
+    <script src="NwConn/NwMLabApiConn.js"></script>
 
     <script src="word/WordEachView.js"></script>
     <script src="word/WordView.js"></script>
