--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="lib/xdr.js"></script>
 
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.2.1/socket.io.min.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>-->
 
     <script src="lib/step/step.js"></script>
     <script src="NwLib/NwSS.min.js"></script>
