--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
 
     <div data-role="page" data-title="NwDict" class="jqm-demos ui-responsive-panel">
         <div data-role="header" data-position="fixed" data-theme="a">
-            <!-- <a href="../toolbar/" data-rel="back" class="ui-btn ui-btn-left ui-alt-icon ui-nodisc-icon ui-corner-all ui-btn-icon-notext ui-icon-carat-l">Back</a
+            <!-- <a href="../toolbar/" data-rel="back" class="ui-btn ui-btn-left ui-alt-icon ui-nodisc-icon ui-corner-all ui-btn-icon-notext ui-icon-carat-l">Back</a>-->
             <h1>NwDict</h1>
             <a href="#search-panel" data-icon="search" data-iconpos="notext">Menu</a>
             <a id="seting" href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>
-            <!--  <form> 
+           
+                 <!--  <form> 
             <label for="searchbar" class="ui-hidden-accessible">Search:</label>
             <input type="search" name="searchbar" id="search1" value="" data-theme="d" data-mini="true" />
         </form>-->
