--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <ul data-role="listview">
                 <li>
-                    <input type="search" data-theme="a" name="searchbar" id="search" data-mini="true" value="" placeholder="search" data-inline="true">
+                    <input type="search" data-theme="a" name="searchbar" id="search" data-mini="true" value="" placeholder="search" data-inline="true" autocapitalize="none">
                 </li>
                 <li id="searchWordTemp"><a href="#" class="searchWord">word</a></li>
 
