--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="English-Thai Dictionary : พจนานุกรม อังกฤษ-ไทย" />
     <title>NwDict</title>
 
-    <meta name="robots" content="Dictionary English-Thai, พจนานุกรม, อังกฤษ, ภาษาอังกฤษ, ไทย, ความหมาย, แปลว่า, คำแปล" />
-    <meta name="googlebot" content="Dictionary English-Thai, พจนานุกรม, อังกฤษ, ภาษาอังกฤษ, ไทย, ความหมาย, แปลว่า, คำแปล" />
+    <meta name="robots" content="NwDict, nwdict, Dictionary English-Thai, พจนานุกรม, อังกฤษ, ภาษาอังกฤษ, ไทย, ความหมาย, แปลว่า, คำแปล" />
+    <meta name="googlebot" content="NwDict, nwdict, Dictionary English-Thai, พจนานุกรม, อังกฤษ, ภาษาอังกฤษ, ไทย, ความหมาย, แปลว่า, คำแปล" />
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -63,8 +63,8 @@
             <h1>NwDict</h1>
             <a href="#search-panel" data-icon="search" data-iconpos="notext">Menu</a>
             <a id="seting" href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>
-           
-                 <!--  <form> 
+
+            <!--  <form> 
             <label for="searchbar" class="ui-hidden-accessible">Search:</label>
             <input type="search" name="searchbar" id="search1" value="" data-theme="d" data-mini="true" />
         </form>-->
