add md5 to link

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="googlebot" content="NwDict, nwdict, Dictionary English-Thai, พจนานุกรม, อังกฤษ, ภาษาอังกฤษ, ไทย, ความหมาย, แปลว่า, คำแปล" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?01bf19c35d2e2b6a1db88c65d6ae4710" />
 
-    <link href="css/family.css" rel="stylesheet" />
-    <link href="css/jqm-demos.css" rel="stylesheet" />
+    <link href="css/family.css?9ee9f9afa08cce49170f8f6faf357bd7" rel="stylesheet" />
+    <link href="css/jqm-demos.css?6f7532e4c96971a1b9543fd1fdaecb02" rel="stylesheet" />
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.5/jquery.mobile.min.css" rel="stylesheet" />
 
@@ -30,29 +30,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 
 
-    <script src="lib/xdr.js"></script>
+    <script src="lib/xdr.js?5f4371c6efe34addf1fe487e61ac3669"></script>
 
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.2.1/socket.io.min.js"></script>-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>-->
 
-    <script src="lib/step/step.js"></script>
-    <script src="NwLib/NwSS.min.js"></script>
-    <script src="NwLib/NwLib.js"></script>
-    <script src="NwUtil/NwDataMsgObj.js"></script>
+    <script src="lib/step/step.js?437287db8e888e0d06ba594a5f61de69"></script>
+    <script src="NwLib/NwSS.min.js?ecdbd9ca4543f257bb2676291d48305c"></script>
+    <script src="NwLib/NwLib.js?3d0d5a8954725e2ae31ed64fc34b6155"></script>
+    <script src="NwUtil/NwDataMsgObj.js?8c17204b946fa67bf76864424142c40a"></script>
 
-    <script src="NwConn/NwWsClient.js"></script>
-    <script src="service_conn/NwMLabServiceConn.js"></script>
+    <script src="NwConn/NwWsClient.js?7c711f91f301e0342c11419a6c7e440a"></script>
+    <script src="service_conn/NwMLabServiceConn.js?3825a1c4cb195bf276f1a2b94029c7af"></script>
 
 
-    <script src="NwLogWords/logWords.js"></script>
-    <script src="NwConn/NwMLabApiConn.js"></script>
+    <script src="NwLogWords/logWords.js?79a8a54f0398951588b1a7333a53c70a"></script>
+    <script src="NwConn/NwMLabApiConn.js?79e7d3500dc766d23f243f1be8fd43a7"></script>
 
-    <script src="word/WordEachView.js"></script>
-    <script src="word/WordView.js"></script>
-    <script src="word/WordModel.js"></script>
-    <script src="word/WordCollection.js"></script>
+    <script src="word/WordEachView.js?e52377be8de4d7f7a9f5f9881f776dee"></script>
+    <script src="word/WordView.js?bffffed45bf4f8150a308418fa726b35"></script>
+    <script src="word/WordModel.js?b37007604f02ab9d756ba17a22570f32"></script>
+    <script src="word/WordCollection.js?86fa87fbbdae902ec0cfeda3f630ca7c"></script>
 
-    <script src="index.js"></script>
+    <script src="index.js?f143fd500bb67c86e244bbe62d30bd87"></script>
 
 </head>
 <body>
